--- a/public/employees.html
+++ b/public/employees.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div class="row mt-5 mb-4">
-        <div class="col-8 offset-2">
+        <div class="col-12">
           <h1>Listado de empleados</h1>
           <h5 class="form-text text-muted">
             <span id="employee-count" class="badge badge-pill badge-primary"
@@ -29,11 +29,13 @@
           </h5>
         </div>
       </div>
-      <div class="row mb-3">
-        <div id="employee-list" class="col-8 offset-2"></div>
-      </div>
-      <div class="row mb-3 align-items-center">
-        <div class="col-8 offset-2">
+      <div class="row">
+        <div class="col-7">
+          <div class="row mb-3">
+            <div id="employee-list" class="col-12"></div>
+          </div>
+        </div>
+        <div class="col-5 align-items-center">
           <div class="card bg-light">
             <div class="card-header">Crear nuevo empleado</div>
             <div class="card-body">
